// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands should attempt to run commands: commands 1`] = `
[
  {
    "commitFiles": "<execSync>["git add ../src/__fixtures__/package.json ../src/__fixtures__/CHANGELOG.md && git commit ../src/__fixtures__/package.json ../src/__fixtures__/CHANGELOG.md -m \\"chore(release): undefined\\""]</execSync>",
  },
  {
    "getGit": [
      {
        "commit": "<execSync>["git log <execSync>[\\"git..HEAD --pretty=oneline"]</execSync>",
        "isBreaking": false,
      },
    ],
  },
  {
    "getLinkUrls": {
      "baseUrl": undefined,
      "commitUrl": undefined,
      "compareUrl": undefined,
      "prUrl": undefined,
    },
  },
  {
    "getOverrideVersion": {
      "clean": "<semverClean>[null]</semverClean>",
      "version": undefined,
    },
  },
  {
    "getReleaseCommit": "<execSync>["git log HEAD --grep=\\"chore(release)\\" --pretty=oneline -1"]</execSync>",
  },
  {
    "getVersion": {
      "clean": "<semverClean>["<semverInc>[\\"0.0.100\\",\\"\\"]</semverInc>"]</semverClean>",
      "version": "<semverInc>["0.0.100",""]</semverInc>",
    },
  },
  {
    "runCmd": "<execSync>[null]</execSync>",
  },
]
`;

exports[`Commands should handle multiple formats for releaseTypeScope: releaseTypeScope, multi-list item 1`] = `
{
  "commitFiles": "<execSync>["git add ../src/__fixtures__/package.json ../src/__fixtures__/CHANGELOG.md && git commit ../src/__fixtures__/package.json ../src/__fixtures__/CHANGELOG.md -m \\"chore(release): undefined\\""]</execSync>",
  "getReleaseCommit": "<execSync>["git log HEAD --grep=\\"dolor sit\\" --pretty=oneline -1"]</execSync>",
}
`;

exports[`Commands should handle multiple formats for releaseTypeScope: releaseTypeScope, single list item 1`] = `
{
  "commitFiles": "<execSync>["git add ../src/__fixtures__/package.json ../src/__fixtures__/CHANGELOG.md && git commit ../src/__fixtures__/package.json ../src/__fixtures__/CHANGELOG.md -m \\"chore(release): undefined\\""]</execSync>",
  "getReleaseCommit": "<execSync>["git log HEAD --grep=\\"chore(release)\\" --pretty=oneline -1"]</execSync>",
}
`;

exports[`Commands should handle multiple formats for releaseTypeScope: releaseTypeScope, string 1`] = `
{
  "commitFiles": "<execSync>["git add ../src/__fixtures__/package.json ../src/__fixtures__/CHANGELOG.md && git commit ../src/__fixtures__/package.json ../src/__fixtures__/CHANGELOG.md -m \\"chore(release): undefined\\""]</execSync>",
  "getReleaseCommit": "<execSync>["git log HEAD --grep=\\"chore(release)\\" --pretty=oneline -1"]</execSync>",
}
`;
